# 1c-sales-analytics

./: .gitignore  README.md  setup.ps1  setup.sh
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  db.py
backend/app/integrations/: one_c_client.py
backend/app/models/: sales.py
backend/app/repositories/: sales_repo.py
backend/app/schemas/: sales.py
fake_1c/: Dockerfile  pyproject.toml  server.py
infra/: docker-compose.yml
