[tool.poetry]
name = "fastapi-1c-backend"
version = "0.1.0"
description = "FastAPI backend для интеграции с 1С и аналитики"
authors = ["you"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9"
fastapi = "^0.100.0"
httpx = "^0.24.0"
sqlalchemy = "^2.0.20"
asyncpg = "0.31"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"